examples/invalid/MapInvalidKey.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

typedef map<float, int32_t> BadMap;

struct UseBad {
    BadMap m;
};

